fix: fix param input overflow in different screen size

--- a/css/copypasta.css
+++ b/css/copypasta.css
@@ -3,11 +3,11 @@
     background-color: aquamarine;
     margin: 0 1vw 5vh 1vw;
     padding: 2%;
-    border-radius: 5%;
+    border-radius: 10px;
     display:flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 5%
+    gap: 4vw;
 }
 #template{
     flex: 0 0 80%;
@@ -20,6 +20,11 @@
 }
 #replace{
     flex: 0 0 20%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    box-sizing: border-box;
+    max-width: 100%;
 }
 .replaced-word{
     font-weight: bold;
@@ -65,4 +70,16 @@
 .copypasta-box > p {
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.param-input{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.param-input input{
+    box-sizing: border-box;
+    padding: 0.5rem;
+    width: 14vw;
 }
